--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!--💡UPDATE: Add your social media links and CV file-->
             <a href="https://www.linkedin.com/in/tega-abada/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Tegaabada" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="assets/Your_Name_CV.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
+            <a href="assets/Tega_Data_Analyst_.docx" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
         </div>
     </div>
 </header>
@@ -57,11 +57,11 @@
         <h2>About Me</h2>
         <div class="about-content">
             <!--💡UPDATE: Change the image to your own profile photo in assets/images/-->
-            <img src="assets/images/profile-placeholder.jpg" alt="Your Name" class="profile-photo">
+            <img src="assets/images/profile-placeholder.jpg" alt="Tega Abada" class="profile-photo">
             <div class="about-text">
                 <!--💡UPDATE: Write your own 'About Me' text here-->
                 <p> I'm a data professional with expertise in transforming complex datasets into actionable insights. My work focuses on creating interactive visualizations and data-driven stories that help organizations make informed decisions.</p>
-                <p>With experience in Power BI, SQL, and data modeling, I specialize in developing comprehensive reports that reveal hidden patterns and trends in data. This portfolio showcases my projects across various sectors.</p>
+                <p>With experience in Advanced Excel, Power BI, SQL, and data modeling, I specialize in developing comprehensive reports that reveal hidden patterns and trends in data. This portfolio showcases my projects across various sectors.</p>
             </div>
         </div>
     </div>
@@ -148,9 +148,9 @@
                 </div>
                 <ul class="skill-list">
                     <li>Power BI</li>
+                    <li>Excel Dashboards</li>
                     <li>Tableau</li>
                     <li>Looker Studio</li>
-                    <li>Excel Dashboards</li>
                 </ul>
             </div>
 
@@ -163,7 +163,6 @@
                 <ul class="skill-list">
                     <li>SQL</li>
                     <li>Advanced Excel</li>
-                    <li>Python (Pandas)</li>
                     <li>Google Sheets</li>
                 </ul>
             </div>
@@ -192,8 +191,8 @@
         <h2>Send me a message</h2>
         
         <!--💡UPDATE: Go to formsubmit.co and replace the email with your own-->
-        <form action="https://formsubmit.co/your-email@example.com" method="POST" class="contact-form">
-            <p> Interested in collaborating or have questions about my work? I'd love to hear from you!</p>
+        <form action="https://formsubmit.co/tegaabada1@gmail.com" method="POST" class="contact-form">
+            <p> Interested in collaborating or have questions about my work? Contact me.</p>
 
             <!-- Form Fields -->
             <div class="form-group">
@@ -224,7 +223,7 @@
 <footer>
     <div class="container">
         <!--💡UPDATE: Change the year and your name-->
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Tega Abada. All rights reserved.</p>
     </div>
 </footer>
 
