--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <img src="assets/images/RMH_IMG.jpg" alt="Patient Severity & Readmission Preview">
                 <div class="project-card-content">
                     <h3>Patient Severity & Readmission</h3>
-                    <p>The patient severity and readmission project analyzes hospital data to uncover acuity patterns, triage efficiency, and readmission risks, providing top level insights for resource planning and care pathway improvement. This analysis was conducted using mainly Excel, leveraging on the use of pivot tables to generate an interactive dashboard.</p>
+                    <p>This project analyzes hospital data to uncover acuity patterns, triage efficiency, and readmission risks, providing top level insights for resource planning and care pathway improvement. Tools used was mainly Excel to generate an interactive dashboard.</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
                         <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
