--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     <p>This project analyzes hospital data to uncover acuity patterns, triage efficiency, and readmission risks, providing top level insights for resource planning and care pathway improvement. Tools used was mainly Excel to generate an interactive dashboard.</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
-                        <a href="README.md" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
                         <!--💡UPDATE: Add link to your live dashboard (e.g., Power BI, Tableau Public)-->
-                        <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/HospitalSynthetic.xlsx" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/HospitalSynthetic.xlsxx" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
