--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
                         <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
                         <!--💡UPDATE: Add link to your live dashboard (e.g., Power BI, Tableau Public)-->
-                        <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/HospitalSynthetic.xlsxx" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/HospitalSynthetic.xlsx" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
