--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- Project 1 -->
              <div class="project-card">
                 <!--💡UPDATE: Add a preview image of your project to assets/images/ -->
-                <img src="assets/images/RMH_IMG.jpg" alt="Patient Severity & Readmission Preview">
+                <img src="assets/images/pexels-matreding-9741531.jpg" alt="Patient Severity & Readmission Preview">
                 <div class="project-card-content">
                     <h3>Patient Severity & Readmission</h3>
                     <p>This project analyzes hospital data to uncover acuity patterns, triage efficiency, and readmission risks, providing top level insights for resource planning and care pathway improvement. Tools used was mainly Excel to generate an interactive dashboard.</p>
