--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             <div class="project-card">
                 <img src="assets/images/pexels-rdne-7947849.jpg" alt="Project Two Preview">
                 <div class="project-card-content">
-                    <h3>Project Title Two</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <h3>Inscribed Sales Performance</h3>
+                    <p>This project analyzes sales data to uncover revenue trends, customer purchasing behavior, product category performance, and regional strongholds, providing top‑level insights to guide expansion strategy. Tools used was mainly Excel to generate an interactive dashboard..</p>
                     <div class="project-buttons">
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
-                        <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Tegaabada/Inscribed-Sales-Performance-Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/Tegaabada/Inscribed-Sales-Performance-Analysis/blob/main/Sales%20Data.xlsx" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
