--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <div class="project-card-content">
                     <h3>Patient Severity & Readmission</h3>
                     <p>This project analyzes hospital data to uncover acuity patterns, triage efficiency, and readmission risks, providing top level insights for resource planning and care pathway improvement. Tools used was mainly Excel to generate an interactive dashboard.</p>
+                     **Tools Used:**  <img src="https://img.shields.io/badge/Excel-217346?style=flat&logo=microsoft-excel&logoColor=white" alt="Excel Skill Badge">
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
                         <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
