--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                     <h3>Project Title Three</h3>
                     <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
                     <div class="project-buttons">
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
-                        <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Tegaabada/SQL_Employee_Data/blob/main/README.md" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/Tegaabada/SQL_Employee_Data/blob/main/SQLQuery%20-%20Employee%20Data.sql" target="_blank" class="btn btn-secondary">View Code</a>
                     </div>
                 </div>
             </div>
