--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
             <!-- Project 3 -->
             <div class="project-card">
-                <img src="assets/images/project-placeholder-3.jpg" alt="Project Three Preview">
+                <img src="assets/images/pexels-luis-gomes-166706-546819.jpg" alt="SQL Employee Data">
                 <div class="project-card-content">
-                    <h3>Project Title Three</h3>
+                    <h3>Employee Data Queries</h3>
                     <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
                     <div class="project-buttons">
                         <a href="https://github.com/Tegaabada/SQL_Employee_Data/blob/main/README.md" target="_blank" class="btn">Documentation</a>
