--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 <img src="assets/images/pexels-matreding-9741531.jpg" alt="Patient Severity & Readmission Preview">
                 <div class="project-card-content">
                     <h3>Patient Severity & Readmission</h3>
-                    <p>This project analyzes hospital data to uncover acuity patterns, triage efficiency, and readmission risks, providing top level insights for resource planning and care pathway improvement. Tools used was mainly Excel to generate an interactive dashboard.</p>
+                    <p>This project analyzes hospital data to uncover acuity patterns, triage efficiency, and readmission risks, providing top level insights for resource planning and care pathway improvement.</p>
+                    <p>Tools: Excel</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
                         <a href="https://github.com/Tegaabada/Riverside_Severity_and_Readmission_Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
@@ -95,7 +96,8 @@
                 <img src="assets/images/pexels-rdne-7947849.jpg" alt="Project Two Preview">
                 <div class="project-card-content">
                     <h3>Inscribed Sales Performance</h3>
-                    <p>This project analyzes sales data to uncover revenue trends, customer purchasing behavior, product category performance, and regional strongholds, providing top‑level insights to guide expansion strategy. Tools used was mainly Excel to generate an interactive dashboard..</p>
+                    <p>This project analyzes sales data to uncover revenue trends, customer purchasing behavior, product category performance, and regional strongholds, providing top‑level insights to guide expansion strategy.</p>
+                    <p>Tools: Excel</p>
                     <div class="project-buttons">
                         <a href="https://github.com/Tegaabada/Inscribed-Sales-Performance-Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
                         <a href="https://github.com/Tegaabada/Inscribed-Sales-Performance-Analysis/blob/main/Sales%20Data.xlsx" target="_blank" class="btn btn-secondary">View Dashboard</a>
@@ -108,7 +110,8 @@
                 <img src="assets/images/pexels-luis-gomes-166706-546819.jpg" alt="SQL Employee Data">
                 <div class="project-card-content">
                     <h3>Employee Data Queries</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <p>This project focuses on building and analyzing an employee database using SQL Server, where data was cleaned, transformed, and queried to uncover workforce demographics, departmental insights, and salary trends</p>
+                    <p>Tools: SQL</p>
                     <div class="project-buttons">
                         <a href="https://github.com/Tegaabada/SQL_Employee_Data/blob/main/README.md" target="_blank" class="btn">Documentation</a>
                         <a href="https://github.com/Tegaabada/SQL_Employee_Data/blob/main/SQLQuery%20-%20Employee%20Data.sql" target="_blank" class="btn btn-secondary">View Code</a>
@@ -120,11 +123,12 @@
             <div class="project-card">
                 <img src="assets/images/project-placeholder-4.jpg" alt="Project Four Preview">
                 <div class="project-card-content">
-                    <h3>Project Title Four</h3>
+                    <h3>Workplace Safety Analysis</h3>
                     <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <p>Tools: SQL</p>
                     <div class="project-buttons">
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
-                        <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="https://github.com/Tegaabada/Workplace_Safety_Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/Tegaabada/Workplace_Safety_Analysis/blob/main/SQL-%20Workplacesafety.sql" target="_blank" class="btn btn-secondary">View Code</a>
                     </div>
                 </div>
             </div>
