--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="project-card">
                 <img src="assets/images/pexels-luis-gomes-166706-546819.jpg" alt="SQL Employee Data">
                 <div class="project-card-content">
-                    <h3>Employee Data Queries</h3>
+                    <h3>Employee Data Analysis</h3>
                     <p>This project focuses on building and analyzing an employee database using SQL Server, where data was cleaned, transformed, and queried to uncover workforce demographics, departmental insights, and salary trends</p>
                     <p>Tools: SQL</p>
                     <div class="project-buttons">
