--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
 
             <!-- Project 4 -->
             <div class="project-card">
-                <img src="assets/images/project-placeholder-4.jpg" alt="Project Four Preview">
+                <img src="assets/images/kevin-ku.jpg" alt="Project Four Preview">
                 <div class="project-card-content">
                     <h3>Workplace Safety Analysis</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.<br>
+                    <p>This workplace safety analysis project uses SQL Server to clean, structure, and query incident data, uncovering patterns in costs, severity, demographics, and plant-level risks.<br>
                     Tools: SQL</p>
                     <div class="project-buttons">
                         <a href="https://github.com/Tegaabada/Workplace_Safety_Analysis/blob/main/README.md" target="_blank" class="btn">Documentation</a>
